app/assets/stylesheets/base.scss
a {
  border-bottom: 0;
  color: $sul-link-color;
  text-decoration: none;

  &.disabled {
    color: $sul-btn-disabled-color;
    cursor: not-allowed;
    text-decoration: none;
  }
}

body {
  color: $sul-text-color;
  font-family: 'Source Sans Pro', 'Arial Unicode MS', Helvetica, sans-serif;
}

a:not(.btn) {
  &:hover,
  &:focus,
  &:active {
    border-bottom: 0;
    color: $sul-link-color-border;
    text-decoration: underline;
  }
}

h1, .h1 {
  color: $sul-h1-font-color;
  font-weight: 300;
  line-height: 1.2em;
  padding: 10px 0;
}

h2, .h2 {
  color: $sul-h2-font-color;
  letter-spacing: 0;
  line-height: 1.2em;
  margin: .5em 0;
}

h3, .h3 {
  color: $sul-h3-font-color;
  line-height: 1.2em;
  margin: 0 0 .4em;
}

h4, .h4 {
  color: $sul-h4-font-color;
  line-height: 1.2em;
}

dt {
  font-weight: normal;
  text-transform: uppercase !important;
}

#result-types {
  dl {
    margin-bottom: 15px;
  }

  dt {
    color: $cool-grey;
    font-size: .9em;
    padding-right: 1em;
    padding-top: .15em;
    width: 12em;
  }

  dd {
    margin-left: 2em;
    margin-bottom: .5em;
    max-width: 45em;
  }
}

label {
  font-weight: normal;
}

